--- a/miniprogram/pages/config-photo-page/config-photo-page.wxss
+++ b/miniprogram/pages/config-photo-page/config-photo-page.wxss
@@ -1,6 +1,20 @@
 @import "./../../fonts/index.wxss";
 @import "./layout-mode.wxss";
 
+.official-account {
+  position: fixed;
+  z-index: 999999;
+  top: -200px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transition: top 0.7s;
+}
+
+.official-account-show {
+  top: 0px;
+}
+
 .container {
   width: 100%;
   height: 100vh;
